[WFLY-5950] Update client-side modular args to standard set that we suggest user's use.
Only use -add-opens=java.base/sun.security.ssl=ALL-UNNAMED in the elytron module which has a test that requires it.