@@ -30,6 +30,14 @@
 
     <name>WildFly: Elytron Subsystem</name>
 
+    <properties>
+        <!-- TlsTestCase specifies use of sun.security.ssl.SunJSSE in the server config,
+             so make it available. -->
+        <modular.jdk.args>${standard.client.modular.jdk.args}
+            --add-opens=java.base/sun.security.ssl=ALL-UNNAMED
+        </modular.jdk.args>
+    </properties>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
